Jann 30/objects/Capital_Expenditure__c.object
<CustomObject>
    <fields>
        <fullName>ARERate__c</fullName>
        <formula>RFA__r.ARERate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A.R.E. Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmountUSD__c</fullName>
        <formula>Amount__c* ARERate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount (FC)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetCategory__c</fullName>
        <label>Asset Category</label>
        <picklist>
            <picklistValues>
                <fullName>Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasehold Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buildings &amp; Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machinery &amp; Equipment (M&amp;E)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Equipment - Venders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Equipment - Coolers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Equipment - Dispensers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Equipment - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Furniture &amp; Fixtures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet - Automobiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet - Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Containers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottles &amp; Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPPrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InvestmentObjectiveCategory__c</fullName>
        <label>Investment Objective Category</label>
        <picklist>
            <picklistValues>
                <fullName>Quality and Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Productivity / Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Drink Initiatives</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth / Production Expansion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Acceleration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Responsibility and Planet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RFA__c</fullName>
        <label>RFA</label>
        <referenceTo>RFA__c</referenceTo>
        <relationshipName>Capital_Expenditures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Capital Request Detail</label>
    <nameField>
        <displayFormat>CE#-{000000}</displayFormat>
        <label>Capital Request Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Request Details</pluralLabel>
    <recordTypes>
        <fullName>CapitalProjectRequest</fullName>
        <active>true</active>
        <label>Capital Project Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>SmallProjectRequest</fullName>
        <active>true</active>
        <label>Small Project Request</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>